Fixed non-csd blurry windows
closes #216

--- a/Communitheme/gtk-3.0/_common.scss
+++ b/Communitheme/gtk-3.0/_common.scss
@@ -4535,7 +4535,7 @@ decoration {
   .popup & { box-shadow: none; }
 
   // server-side decorations as used by mutter
-  .ssd & { box-shadow: 0 0 0 1px $_wm_border; } //just doing borders, wm draws actual shadows
+  .ssd & { box-shadow: none; } //just doing borders, wm draws actual shadows
 
   .csd.popup & {
     border-radius: 0;
